added track.js log

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
     // Fix this
     errorBtns[10].addEventListener('click', () => {
-      console.table(["American Airlines", "British Airways", "Virgin Atlantic"]);
+      console.table(["CSE110", "Math180B", "Math180A"]);
     });
 
     errorBtns[11].addEventListener('click', () => {
